<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL" Id="{9060b04a-cfa7-492d-831f-b5c297804fa0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	StartPb01				:	BOOL;
	FillingPosition01		:	BOOL;
	Select3Tablet			:	BOOL;
	Select5Tablet			:	BOOL;
	Select7Tablet			:	BOOL;
	LightBarrier01			:	BOOL;
	
	MotorRunning01			:	BOOL;
	ValveOpened01			:	BOOL;
	Tablet3Selected01		:	BOOL;
	Tablet5Selected01		:	BOOL;
	Tablet7Selected01		:	BOOL;
	
	
	StartPb02				:	BOOL;
	FillingPosition02		:	BOOL;
	LightBarrier02			:	BOOL;
	
	MotorRunning02			:	BOOL;
	ValveOpened02			:	BOOL;
	TabletsSelected02		:	UINT;
	TabletsInTube02			: 	UINT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>