<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="Simulation01" Id="{d24bf98c-b8ae-4b57-a936-0b89c5b0682a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Simulation01
VAR
	TubePosition					:	ARRAY[1..3] OF UINT :=[0,0,0];
	OffsetForNextTube				:	UINT := 90;				
	Idx								:	UINT;
	TubePosStep						:	UINT := 1;
	Tube02Active					:	BOOL;
	Tube03Active					:	BOOL;
	FillingPos						:	UINT := 275;
	ValvePosition					:	UINT;
	NewTubeFilling					:	BOOL;
	TabletPositionVert				: 	UINT;
	TabletPositionHorizn			: 	UINT;
	TabletNumberInTube				:	UINT;
	TabletNumberLoaded				:	UINT;
	
	VisuTabletsInTube				:	UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF VisuTabletsInTube = 0 THEN
	GVL.Select3Tablet := TRUE;
	GVL.Select5Tablet := FALSE;
	GVL.Select7Tablet := FALSE;
ELSIF VisuTabletsInTube = 1 THEN
	GVL.Select3Tablet := FALSE;
	GVL.Select5Tablet := TRUE;
	GVL.Select7Tablet := FALSE;
ELSIF VisuTabletsInTube = 2 THEN
	GVL.Select3Tablet := FALSE;
	GVL.Select5Tablet := FALSE;
	GVL.Select7Tablet := TRUE;
END_IF


IF GVL.MotorRunning01 THEN
	
	(* tube motion simulation *)
	TubePosition[1] := SEL(TubePosition[1] <= 330, 0, TubePosition[1] + TubePosStep);
	IF TubePosition[1] > OffsetForNextTube THEN
		Tube02Active := TRUE;
	END_IF
	
	IF Tube02Active THEN
		TubePosition[2] := SEL(TubePosition[2] <= 330, 0, TubePosition[2] + TubePosStep);
	END_IF
	Tube02Active := TubePosition[2] >0 AND TubePosition[2] <=330;
	
	IF TubePosition[2] > OffsetForNextTube THEN
		Tube03Active := TRUE;
	END_IF
	
	IF Tube03Active THEN
		TubePosition[3] := SEL(TubePosition[3] <= 330, 0, TubePosition[3] + TubePosStep);
	END_IF
	Tube03Active := TubePosition[3] >0 AND TubePosition[3] <=330;
	
	// check if any tube at the filling position
	FOR Idx:= 1 TO 3 DO
		IF ABS(FillingPos - TubePosition[Idx]) < 2  THEN
			GVL.FillingPosition01 := TRUE;
			// some tube at the filling position, not needed to test anothers 
			EXIT;
		ELSE
			GVL.FillingPosition01 := FALSE;
		END_IF
	END_FOR
	
	// tube loaded with selected number of tablets, move tablets together with tube 
	IF TabletNumberLoaded = TabletNumberInTube THEN
		TabletPositionHorizn := TabletPositionHorizn + TubePosStep;
	END_IF
	
	// check if any tablets with tube on the end of belt conveyor
	FOR Idx:= 1 TO 3 DO
		IF ABS(330 - TubePosition[Idx]) < 2 THEN
			TabletNumberLoaded := 0;
			TabletPositionHorizn := 0;
		END_IF
	END_FOR
	
	
	
END_IF



// valve simulation
IF GVL.ValveOpened01 THEN
	ValvePosition := 24;
	NewTubeFilling := TRUE;
ELSE
	ValvePosition := 0;
	NewTubeFilling := FALSE;
END_IF

// falling tablet simulation
IF GVL.Select3Tablet THEN 
	TabletNumberInTube := 3;
ELSIF GVL.Select5Tablet THEN 
	TabletNumberInTube := 5;
ELSIF GVL.Select7Tablet THEN 
	TabletNumberInTube := 7; 
END_IF;


IF NewTubeFilling AND TabletNumberLoaded < TabletNumberInTube THEN
	TabletPositionVert := TabletPositionVert + 2;
	// tablet position in tube
	IF TabletPositionVert >= 69 THEN
		TabletNumberLoaded := TabletNumberLoaded+1;
		TabletPositionVert := 0;
	END_IF
END_IF


// Light barrier simulation
GVL.LightBarrier01 := TabletPositionVert > 36 AND TabletPositionVert < 46;




]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>