<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="Simulation02" Id="{65682a7a-091f-48dd-94f3-be2eb9b542ac}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Simulation02
VAR
	TubePosition					:	ARRAY[1..3] OF UINT :=[0,0,0];
	OffsetForNextTube				:	UINT := 90;				
	Idx								:	UINT;
	TubePosStep						:	UINT := 1;
	Tube02Active					:	BOOL;
	Tube03Active					:	BOOL;
	FillingPos						:	UINT := 275;
	ValvePosition					:	UINT;
	NewTubeFilling					:	BOOL;
	TabletPositionVert				: 	UINT;
	TabletPositionHorizn			: 	UINT;
	TabletNumberInTube				:	UINT;
	TabletNumberLoaded				:	UINT;
	
	VisuTabletsInTube				:	UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[GVL.TabletsInTube02 := VisuTabletsInTube;

IF GVL.MotorRunning02 THEN
	
	(* tube motion simulation *)
	TubePosition[1] := SEL(TubePosition[1] <= 330, 0, TubePosition[1] + TubePosStep);
	IF TubePosition[1] > OffsetForNextTube THEN
		Tube02Active := TRUE;
	END_IF
	
	IF Tube02Active THEN
		TubePosition[2] := SEL(TubePosition[2] <= 330, 0, TubePosition[2] + TubePosStep);
	END_IF
	Tube02Active := TubePosition[2] >0 AND TubePosition[2] <=330;
	
	IF TubePosition[2] > OffsetForNextTube THEN
		Tube03Active := TRUE;
	END_IF
	
	IF Tube03Active THEN
		TubePosition[3] := SEL(TubePosition[3] <= 330, 0, TubePosition[3] + TubePosStep);
	END_IF
	Tube03Active := TubePosition[3] >0 AND TubePosition[3] <=330;
	
	// check if any tube at the filling position
	FOR Idx:= 1 TO 3 DO
		IF ABS(FillingPos - TubePosition[Idx]) < 2  THEN
			GVL.FillingPosition02 := TRUE;
			// some tube at the filling position, not needed to test anothers 
			EXIT;
		ELSE
			GVL.FillingPosition02 := FALSE;
		END_IF
	END_FOR
	
	// tube loaded with selected number of tablets, move tablets together with tube 
	IF TabletNumberLoaded = TabletNumberInTube THEN
		TabletPositionHorizn := TabletPositionHorizn + TubePosStep;
	END_IF
	
	// check if any tablets with tube on the end of belt conveyor
	FOR Idx:= 1 TO 3 DO
		IF ABS(330 - TubePosition[Idx]) < 2 THEN
			TabletNumberLoaded := 0;
			TabletPositionHorizn := 0;
		END_IF
	END_FOR
	
	
	
END_IF



// valve simulation
IF GVL.ValveOpened02 THEN
	ValvePosition := 24;
	NewTubeFilling := TRUE;
ELSE
	ValvePosition := 0;
	NewTubeFilling := FALSE;
END_IF


// falling tablet simulation
TabletNumberInTube := GVL.TabletsInTube02;


IF NewTubeFilling AND TabletNumberLoaded < TabletNumberInTube THEN
	TabletPositionVert := TabletPositionVert + 2;
	// tablet position in tube
	IF TabletPositionVert >= 69 THEN
		TabletNumberLoaded := TabletNumberLoaded+1;
		TabletPositionVert := 0;
	END_IF
END_IF


// Light barrier simulation
GVL.LightBarrier02 := TabletPositionVert > 36 AND TabletPositionVert < 46;




]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>